central-bundle/central/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
spec:
  ports:
  - name: https
    port: 443
    targetPort: api
  selector:
    app: central
  type: ClusterIP
