central-bundle/central/loadbalancer.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: central
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: central
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: central-mtls
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
spec:
  host: central.stackrox
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: central
